# tostal

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: alembic.ini  requirements.txt
api/alembic/: env.py
api/app/: config.py  main.py
api/tests/: conftest.py  test_api.py  test_auth.py
docs/: tostal-implementation-plan.md
gateway/: Dockerfile  next.config.ts  package.json
gateway/src/: middleware.ts  types.ts
storage/scripts/: seed_data.py
storage/terraform/: main.tf  variables.tf
training/: pyproject.toml
training/data/: __init__.py  lithos-dataset-metadata.json  normalize_force2020.py  normalize_taranaki.py  npd_core.py  synthetic.py  thin_section.py
training/notebooks/: train_and_evaluate.ipynb  train_unified_geoscience.ipynb
training/scripts/: evaluate.py  train_dino_classifier.py  train_phase1.py  train_phase2.py  train_phase3.py  train_phase4.py  train_segmenter.py  train_thin_section.py  train_xgboost_facies.py
training/src/unified_geo/: __init__.py  config.py  decoder.py  encoder.py  model.py  reference.py
training/src/unified_geo/data/: __init__.py  geology_text.py  synthetic.py
training/src/unified_geo/encoders/: __init__.py  image.py  spatial.py  text.py  well_log.py
training/src/unified_geo/heads/: __init__.py  facies.py  kriging.py  lithology.py
training/src/unified_geo/moe/: __init__.py  decoder_layer.py  experts.py  router.py
training/src/unified_geo/training/: __init__.py  phase1_pretrain.py  phase2_heads.py  phase3_lm.py  phase4_joint.py  train_utils.py
workflows/: worker.py
(+25 files in other folders)
