[project]
name = "tostal-training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "xgboost>=2.0",
    "scikit-learn",
    "lasio",
    "openpyxl",
    "torch>=2.5",
    "torchvision",
    "tqdm",
    "datasets",
    "mlcroissant",
    "kagglehub",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]